--- a/src/main/resources/templates/trainUser.html
+++ b/src/main/resources/templates/trainUser.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="utf-8" />
 		<title>新增用户</title>
@@ -13,6 +13,14 @@
     <link href="../build/css/custom.min.css" rel="stylesheet">
     			<!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <style type="text/css">
+#yincang{
+    width: 90px;height: 30px;margin:0 auto;float: right;
+
+}
+
+
+        </style>
 
 	</head>
 	<body>
@@ -22,22 +30,22 @@
                  
                   <div class="x_content">
 
-                    <form class="form-horizontal form-label-left" novalidate="">
+                    <form class="form-horizontal form-label-left" novalidate="" th:action="@{/trainUser}" method="post">
 
                       
                       <span class="section"></span>
 					  <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="number">用户编码 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="number" >用户编码 <span class="required">*</span>
                         </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="number" id="number" name="number" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
+                        <div class="col-md-6 col-sm-6 col-xs-12" >
+                          <input type="text" id="number" name="userCode" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="item form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">用户名称<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
+                          <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="userName"  required="required" type="text">
                         </div>
                       </div>
                       <div class="item form-group">
@@ -49,38 +57,50 @@
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">用户角色</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <select class="form-control">
-                        <option selected="" value="-- 请选择 --">-- 请选择 --</option>
-        				<option value="系统管理员">系统管理员</option>
-        				<option value="人事专员">人事专员</option>
-        				<option value="人事经理">人事经理</option>
-        				<option value="薪酬专员">薪酬专员</option>
-        				<option value="薪酬经理">薪酬经理</option>
-        				<option value="人力资源部负责人">人力资源部负责人</option>
-        				<option value="公司领导">公司领导</option>
-      
+                          <select  class="form-control" name="dictionid">
+
+
+
+                              <option  th:each="diction:${dictionaryList}" th:if="${diction.getDataType()}==userRole" th:text="${diction.dataName}"  selected="" th:value="${diction.id}">-- 请选择 --
+
+
+                        </option>
+
+
                           </select>
                         </div>
                       </div>
                       <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="occupation">所属部门 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="depName">所属部门 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="occupation" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
-                        </div><i class="fa fa-search-plus"></i>
+                          <input   readonly="readonly" id="depName" type="text" name="depName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+                           <input type="hidden"  id="depId" name="depId">
+                        </div><i  id="myBT"  class="fa fa-search-plus"></i>
+                          <div id="yincang" >
+                              <ul  >
+
+                                  <li th:each="department:${departmentList}">
+                                      <span th:text="${department.depName}"  th:id="${department.id}"></span>
+                                  </li>
+                              </ul>
+
+
+
+                      </div >
                       </div>
                       <div class="item form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="telephone">联系电话<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="tel" id="telephone" name="phone" required="required" data-validate-length-range="8,20" class="form-control col-md-7 col-xs-12">
+                          <input type="number" id="telephone" name="phoneNumber" required="required" data-validate-length-range="8,20" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       
                       <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
-                        	<button id="send" type="submit" class="btn btn-success">保存</button>
-                          <button type="submit" class="btn btn-primary">返回</button>
+                        	<button id="send" type="submit" class="btn btn-success" >添加</button>
+                                  <button type="submit" class="btn btn-primary">返回</button>
                           
                         </div>
                       </div>
@@ -90,18 +110,50 @@
               </div>
             </div>
 		<!-- jQuery -->
-    <script src="../vendors/jquery/dist/jquery.min.js"></script>
+    <script src="../vendors/jquery/dist/jquery.js"></script>
     <!-- Bootstrap -->
     <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="../vendors/fastclick/lib/fastclick.js"></script>
+    <!--<script src="../vendors/fastclick/lib/fastclick.js"></script>-->
     <!-- NProgress -->
-    <script src="../vendors/nprogress/nprogress.js"></script>
+    <!--<script src="../vendors/nprogress/nprogress.js"></script>-->
     <!-- validator -->
-    <script src="../vendors/validator/validator.js"></script>
+    <!--<script src="../vendors/validator/validator.js"></script>-->
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
+
+    <script type="text/javascript">
+$(document).ready(function () {
+
+    //获取所属部门
+    $("#yincang  span").click(function () {
+        var id=$(this).attr("id");
+        var depname=$(this).text();
+        $("#depId").val(id);
+        $("#depName").val(depname);
+
+    })
+
+
+    //点击显示和隐藏
+    $("#myBT").click(function () {
+        var o=$("#yincang");
+        if(o.css("display")!="none"){
+            o.hide();
+            $(this).html("");
+        }else {
+            o.show();
+            $(this).html("");
+        }
+    })
+})
+
+
+
+    </script>
+
+
 
     <!-- validator -->
     <script>
