--- a/src/main/resources/templates/yonghuguanli.html
+++ b/src/main/resources/templates/yonghuguanli.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title>用户管理</title>
@@ -36,7 +36,7 @@
 		<div class="x_content">
                     <br>
                     <div style="text-align: center;">
-                    <ul style="align-content: ;">
+                    <ul style="align-content:">
                     <form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
 
                  <li>     <div class="form-group">
@@ -110,7 +110,7 @@
 		
 		
 		<div class="col-sm-12"><table id="datatable-fixed-header" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="datatable-fixed-header_info"><thead>
-             <a href="#"> <button type="button" class="btn btn-round btn-info"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">新增用户</font></font></button>   </a>      
+             <a href="trainUser"> <button type="button" class="btn btn-round btn-info"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">新增用户</font></font></button>   </a>
                        <tr role="row">
                         	<th class="sorting_asc" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 194px;">用户编码</th>
                         	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 312px;">用户名称</th>
@@ -122,23 +122,17 @@
 
 
                       <tbody>
-               
-                        
-                      <tr role="row" class="odd">
-                          <td class="sorting_1">Airi Satou</td>
-                          <td>Accountant</td>
-                          <td>Tokyo</td>
-                          <td>Tokyo</td>
-                          <td><a>修改</a> &nbsp  <a>明细</a>&nbsp  <a>删除</a></td>
+
+
+
+                      <tr th:each="user:${userList}"  role="row" class="odd">
+                          <td  th:text="${user.userCode}" class="sorting_1"></td>
+                          <td th:text="${user.userName}"></td>
+                          <td th:text="${user.dataName}" ></td>
+                          <td    th:text="${user.depName}"></td>
+                          <td><a th:href="@{/yonghuguanlixiugai(userid=${user.id}  )}">修改</a> &nbsp  <a th:href="@{/yonghuguanlimingxi(userid=${user.id}  )}">明细</a>&nbsp  <a>删除</a></td>
                         </tr>
-                        <tr role="row" class="even">
-                          <td class="sorting_1">Angelica Ramos</td>
-                          <td>Chief Executive Officer (CEO)</td>
-                          <td>London</td>
-                          <td>Tokyo</td>
-                          <td><a>修改</a> &nbsp  <a>明细</a> &nbsp  <a>删除</a></td>
-                          
-                        </tr>
+
                       </tbody>
                     </table></div>
                     <div class="col-sm-5">
