--- a/src/main/resources/templates/sidReview.html
+++ b/src/main/resources/templates/sidReview.html
@@ -1,61 +1,120 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Title</title>
+    <script th:src="@{/js/jquery.js}"></script>
+    <script>
+        $(function () {
+            $("#pass").click(function () {
+                var id = $("#idHidden").val();
+                alert(id);
+                var reviewOpinion = $("#reviewOpinion").val();
+                alert(reviewOpinion);
+                var review = $("#pass").val();
+                alert(review);
+                $.post("reviewSalaryStandard", {
+                    id: id,
+                    review: review,
+                    reviewOpinion: reviewOpinion,
+                }, function (data) {
+                    if (data=="success"){
+                        alert("success");
+                    }
+                })
+            });
 
-    <title>Hello, world!</title>
-    <style type="text/css">
-
-    </style>
+        });
+    </script>
 </head>
 <body>
-<div>
-    <form>
-        <span>薪酬标准编号</span><input type="text" readonly th:value="${salaryStandard.getStandardCode()}">
-        <span>薪酬标准名称</span><input type="text" readonly th:value="${salaryStandard.getStandardName()}"><br>
-        <span>薪酬总额</span><input type="text" readonly th:value="${salaryStandard.getTotal()}">
-        <span>制定人</span><input type="text" readonly th:value="${salaryStandard.getFormulator()}"><br>
-        <span>登记人</span><input type="text" readonly th:value="${salaryStandard.getRegisterPerson()}"><br>
-
-        <span>审核意见</span><textarea></textarea>
-    </form>
-</div>
-<div>
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <th scope="col">序号</th>
-            <th scope="col">薪酬项目名称</th>
-            <th scope="col">金额</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
-            <th scope="row">1</th>
-            <td th:text="${salaryStandardDetail.getItemName()}"></td>
-            <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
-        </tr>
-        </tbody>
-    </table>
+<div style="width: 960px;margin:auto">
+    <div>
+        <form>
+            <input type="hidden" th:value="${salaryStandard.getId()}" id="idHidden">
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="staCode">薪酬标准编号</label>
+                    <input type="text" class="form-control" id="staCode" th:value="${salaryStandard.getStandardCode()}"
+                           readonly>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="staName">薪酬标准名称</label>
+                    <input type="text" class="form-control" id="staName" th:value="${salaryStandard.getStandardName()}"
+                           readonly>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="staTotal">薪酬总额</label>
+                    <input type="text" class="form-control" id="staTotal" th:value="${salaryStandard.getTotal()}"
+                           readonly>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="formulator">制定人</label>
+                    <input type="text" class="form-control" id="formulator" th:value="${salaryStandard.getFormulator()}"
+                           readonly>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="register">登记人</label>
+                    <input type="text" class="form-control" id="register"
+                           th:value="${salaryStandard.getRegisterPerson()}"
+                           readonly>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="reviewOpinion">审核意见</label>
+                <textarea class="form-control" id="reviewOpinion" rows="3"></textarea>
+            </div>
+        </form>
+    </div>
+    <div>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th scope="col">序号</th>
+                <th scope="col">薪酬项目名称</th>
+                <th scope="col">金额</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
+                <th scope="row">1</th>
+                <td th:text="${salaryStandardDetail.getItemName()}"></td>
+                <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <a>
+            <button type="button" class="btn btn-outline-primary" id="pass">审核通过</button>
+        </a>
+        <a>
+            <button type="button" class="btn btn-outline-danger" id="reject">驳回</button>
+        </a>
+        <a th:href="@{/showSalaryStandardList}">
+            <button type="button" class="btn btn-outline-primary">返回</button>
+        </a>
+    </div>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
