更新薪资的部分功能

--- a/src/main/resources/templates/salaryStandard.html
+++ b/src/main/resources/templates/salaryStandard.html
@@ -2,71 +2,120 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style type="text/css">
-        table {
-            font-family: verdana, arial, sans-serif;
-            font-size: 11px;
-            color: #333333;
-            border-width: 1px;
-            border-color: #666666;
-            border-collapse: collapse;
-        }
-
-        th {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #dedede;
-        }
-
-        td {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #ffffff;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 4 DatePicker</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>薪酬标准</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div>
-    <table id="salaryItemTable">
-        <thead>
-        <th>薪酬标准编码</th>
-        <th>薪酬标准编码</th>
-        <th>审核状态</th>
-        <th>登记时间</th>
-        <th>操作</th>
-        </thead>
-        <tbody>
-        <tr th:each="salaryStandard,status:${salaryStandardList}">
-            <td th:text="${salaryStandard.getStandardCode()}"></td>
-            <td th:text="${salaryStandard.getStandardName()}"></td>
-            <td th:text="${salaryStandard.getStatusName()}"></td>
-            <td th:text="${#dates.format(salaryStandard.getCreateDate(),'yyyy/MM/dd')}"></td>
-            <td th:if="${user.getUserRoleName()=='薪酬经理'}">
-                <a th:if="${salaryStandard.getStatusName()}=='起草'"
-                   th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">修改</a>
-                <a th:if="${salaryStandard.getStatusName()}=='通过'"
-                   th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'change')}">变更</a>
-                <a th:if="${salaryStandard.getStatusName()}=='审核中'"
-                   th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'review')}">复核</a>
-                <a th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'show')}">明细</a>
-                <a>删除</a>
-            </td>
-            <td th:if="${user.getUserRoleName()=='薪酬专员'}">
-                <a th:if="${salaryStandard.getStatusName()}=='起草'"
-                   th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">修改</a>
-                <a th:if="${salaryStandard.getStatusName()}=='通过'"
-                   th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'change')}">变更</a>
-                <a th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'show')}">明细</a>
-                <a>删除</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div style="margin-top: 100px">
+    <div>
+        <form class="form-inline" action="/selectSalaryStandard" method="post">
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="inputCode">薪酬标准编码</label>
+                <input type="text" class="form-control mx-sm-3" id="inputCode" name="salaryStandardCode">
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="inputStatus">审核状态</label>
+                <select id="inputStatus" class="form-control mx-sm-3" name="statusName">
+                    <option selected>--请选择--</option>
+                    <option value="起草">起草</option>
+                    <option value="通过">通过</option>
+                    <option value="审核中">审核中</option>
+                    <option value="驳回">驳回</option>
+                </select>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="datepicker1">登记时间&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                <input id="datepicker1" name="start">
+                <script>
+                    $('#datepicker1').datepicker({
+                        uiLibrary: 'bootstrap4'
+                    });
+                </script>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="datepicker2">至&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                <input id="datepicker2" name="end">
+                <script>
+                    $('#datepicker2').datepicker({
+                        uiLibrary: 'bootstrap4'
+                    });
+                </script>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <button type="submit" class="btn btn-outline-primary" name="select">查询</button>
+            </div>
+        </form>
+
+    </div>
+    <div>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">薪酬标准编码</th>
+                <th scope="col">薪酬标准名称</th>
+                <th scope="col">审核状态</th>
+                <th scope="col">登记时间</th>
+                <th scope="col">操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="salaryStandard,status:${salaryStandardList}">
+                <th scope="row" th:text="${status.count}"></th>
+                <td th:text="${salaryStandard.getStandardCode()}"></td>
+                <td th:text="${salaryStandard.getStandardName()}"></td>
+                <td th:text="${salaryStandard.getStatusName()}"></td>
+                <td th:text="${#dates.format(salaryStandard.getCreateDate(),'yyyy/MM/dd')}"></td>
+                <td th:if="${user.getUserRoleName()=='薪酬经理'}">
+                    <a th:if="${salaryStandard.getStatusName()}=='起草'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
+                        <button type="button" class="btn btn-outline-primary">修改</button>
+                    </a>
+                    <a th:if="${salaryStandard.getStatusName()}=='通过'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'change')}">
+                        <button type="button" class="btn btn-outline-primary">变更</button>
+                    </a>
+                    <a th:if="${salaryStandard.getStatusName()}=='审核中'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'review')}">
+                        <button type="button" class="btn btn-outline-primary">复核</button>
+                    </a>
+                    <a th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'show')}">
+                        <button type="button" class="btn btn-outline-primary">明细</button>
+                    </a>
+                    <a th:if="${salaryStandard.getStatusName()}=='起草'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'delete')}">
+                        <button type="button" class="btn btn-outline-danger">删除</button>
+                    </a>
+                </td>
+                <td th:if="${user.getUserRoleName()=='薪酬专员'}">
+                    <a th:if="${salaryStandard.getStatusName()}=='起草'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
+                        <button type="button" class="btn btn-outline-primary">修改</button>
+                    </a>
+                    <a th:if="${salaryStandard.getStatusName()}=='通过'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'change')}">
+                        <button type="button" class="btn btn-outline-primary">变更</button>
+                    </a>
+                    <a th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'show')}">
+                        <button type="button" class="btn btn-outline-primary">明细</button>
+                    </a>
+                    <a th:if="${salaryStandard.getStatusName()}=='起草'"
+                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'delete')}">
+                        <button type="button" class="btn btn-outline-danger">删除</button>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
+<link rel="import" href="linkFile.html">
 </body>
 </html>
