--- a/src/main/resources/templates/sidReview.html
+++ b/src/main/resources/templates/sidReview.html
@@ -4,33 +4,40 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Title</title>
+    <title>薪资标准审核</title>
     <script th:src="@{/js/jquery.js}"></script>
     <script>
         $(function () {
+            //审核通过
             $("#pass").click(function () {
-                var id = $("#idHidden").val();
-                alert(id);
-                var reviewOpinion = $("#reviewOpinion").val();
-                alert(reviewOpinion);
-                var review = $("#pass").val();
-                alert(review);
-                $.post("reviewSalaryStandard", {
-                    id: id,
-                    review: review,
-                    reviewOpinion: reviewOpinion,
-                }, function (data) {
-                    if (data=="success"){
-                        alert("success");
-                    }
-                })
+                let review = "审核通过";
+                reviewSubmit(review);
             });
-
+            //驳回
+            $(function () {
+                $("#reject").click(function () {
+                    let review = "驳回";
+                    reviewSubmit(review);
+                });
+            });
         });
+        //异步提交审核状态
+        function reviewSubmit(review) {
+            let id = $("#idHidden").val();
+            let reviewOpinion = $("#reviewOpinion").val();
+            $.post("reviewSalaryStandard", {
+                "id": id,
+                "review": review,
+                "reviewOpinion": reviewOpinion
+            }, function (data) {
+                if (data == "success") {
+                    alert("success");
+                }
+            });
+        }
     </script>
 </head>
 <body>
@@ -85,7 +92,7 @@
             </thead>
             <tbody>
             <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
-                <th scope="row">1</th>
+                <th scope="row" th:text="${status.count}"></th>
                 <td th:text="${salaryStandardDetail.getItemName()}"></td>
                 <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
             </tr>
@@ -93,12 +100,9 @@
         </table>
     </div>
     <div>
-        <a>
-            <button type="button" class="btn btn-outline-primary" id="pass">审核通过</button>
-        </a>
-        <a>
-            <button type="button" class="btn btn-outline-danger" id="reject">驳回</button>
-        </a>
+
+        <button type="button" class="btn btn-outline-primary" id="pass">审核通过</button>
+        <button type="button" class="btn btn-outline-danger" id="reject">驳回</button>
         <a th:href="@{/showSalaryStandardList}">
             <button type="button" class="btn btn-outline-primary">返回</button>
         </a>
@@ -106,7 +110,7 @@
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -115,6 +119,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
