--- a/src/main/resources/templates/sidShow.html
+++ b/src/main/resources/templates/sidShow.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Title</title>
+    <title>薪资标准明细</title>
 </head>
 <body>
 <div style="width: 960px;margin:auto">
@@ -57,7 +57,7 @@
             </thead>
             <tbody>
             <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
-                <th scope="row">1</th>
+                <th scope="row" th:text="${status.count}"></th>
                 <td th:text="${salaryStandardDetail.getItemName()}"></td>
                 <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
             </tr>
