--- a/src/main/resources/templates/salaryStandard.html
+++ b/src/main/resources/templates/salaryStandard.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 4 DatePicker</title>
+    <title>薪酬标准</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>薪酬标准</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div style="margin-top: 100px">
@@ -73,7 +78,7 @@
                 <td th:text="${salaryStandard.getStandardName()}"></td>
                 <td th:text="${salaryStandard.getStatusName()}"></td>
                 <td th:text="${#dates.format(salaryStandard.getCreateDate(),'yyyy/MM/dd')}"></td>
-                <td th:if="${user.getUserRoleName()=='薪酬经理'}">
+                <td th:if="${session.user.getUserRoleName()=='薪酬经理'}">
                     <a th:if="${salaryStandard.getStatusName()}=='起草'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
                         <button type="button" class="btn btn-outline-primary">修改</button>
@@ -94,7 +99,7 @@
                         <button type="button" class="btn btn-outline-danger">删除</button>
                     </a>
                 </td>
-                <td th:if="${user.getUserRoleName()=='薪酬专员'}">
+                <td th:if="${session.user.getUserRoleName()=='薪酬专员'}">
                     <a th:if="${salaryStandard.getStatusName()}=='起草'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
                         <button type="button" class="btn btn-outline-primary">修改</button>
@@ -116,6 +121,5 @@
         </table>
     </div>
 </div>
-<link rel="import" href="linkFile.html">
 </body>
 </html>
