--- a/src/main/resources/templates/sidReview.html
+++ b/src/main/resources/templates/sidReview.html
@@ -4,13 +4,22 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>薪资标准审核</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>薪资标准审核</title>
-    <script th:src="@{/js/jquery.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     <script>
         $(function () {
+            calculateSum();
             //审核通过
             $("#pass").click(function () {
                 let review = "审核通过";
@@ -24,6 +33,7 @@
                 });
             });
         });
+
         //异步提交审核状态
         function reviewSubmit(review) {
             let id = $("#idHidden").val();
@@ -37,6 +47,24 @@
                     alert("success");
                 }
             });
+        }
+
+        //计算薪酬总额
+        function calculateSum() {
+            let sum = 0.0;
+            $(".itemAmount").each(function () {
+                let itemAmount = parseFloat($(this).val());
+                sum = add(sum, itemAmount);
+            });
+            $("#staTotal").val(sum);
+        }
+
+        //精确加法
+        function add(num1, num2) {
+            const num1Digits = (num1.toString().split('.')[1] || '').length;
+            const num2Digits = (num2.toString().split('.')[1] || '').length;
+            const baseNum = Math.pow(10, Math.max(num1Digits, num2Digits));
+            return (num1 * baseNum + num2 * baseNum) / baseNum;
         }
     </script>
 </head>
@@ -58,8 +86,7 @@
                 </div>
                 <div class="col-md-4 mb-3">
                     <label for="staTotal">薪酬总额</label>
-                    <input type="text" class="form-control" id="staTotal" th:value="${salaryStandard.getTotal()}"
-                           readonly>
+                    <input type="text" class="form-control" id="staTotal" readonly>
                 </div>
             </div>
             <div class="form-row">
@@ -74,6 +101,13 @@
                            th:value="${salaryStandard.getRegisterPerson()}"
                            readonly>
                 </div>
+                <div class="col-md-4 mb-3">
+                    <label for="date">登记日期</label>
+                    <input type="text" class="form-control" id="date"
+                           th:value="${#dates.format(salaryStandard.getCreateDate(),'yyyy/MM/dd')}"
+                           readonly>
+                </div>
+
             </div>
             <div class="form-group">
                 <label for="reviewOpinion">审核意见</label>
@@ -94,7 +128,10 @@
             <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
                 <th scope="row" th:text="${status.count}"></th>
                 <td th:text="${salaryStandardDetail.getItemName()}"></td>
-                <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
+                <td>
+                    <input type="text" class="form-control itemAmount"
+                           th:value="${#numbers.formatDecimal(salaryStandardDetail.getItemAmount(), 1, 2)}" readonly>
+                </td>
             </tr>
             </tbody>
         </table>
@@ -103,21 +140,10 @@
 
         <button type="button" class="btn btn-outline-primary" id="pass">审核通过</button>
         <button type="button" class="btn btn-outline-danger" id="reject">驳回</button>
-        <a th:href="@{/showSalaryStandardList}">
+        <a th:href="@{/salaryStandard}">
             <button type="button" class="btn btn-outline-primary">返回</button>
         </a>
     </div>
 </div>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 </body>
 </html>
