--- a/src/main/resources/templates/sidShow.html
+++ b/src/main/resources/templates/sidShow.html
@@ -4,16 +4,42 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>薪资标准明细</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
+    <title>薪资标准审核</title>
+    <script>
+        $(function () {
+            calculateSum();
+        });
+
+        //计算薪酬总额
+        function calculateSum() {
+            let sum = 0.0;
+            $(".itemAmount").each(function () {
+                let itemAmount = parseFloat($(this).val());
+                sum = add(sum, itemAmount);
+            });
+            $("#staTotal").val(sum);
+        }
+
+        //精确加法
+        function add(num1, num2) {
+            const num1Digits = (num1.toString().split('.')[1] || '').length;
+            const num2Digits = (num2.toString().split('.')[1] || '').length;
+            const baseNum = Math.pow(10, Math.max(num1Digits, num2Digits));
+            return (num1 * baseNum + num2 * baseNum) / baseNum;
+        }
+    </script>
 </head>
 <body>
 <div style="width: 960px;margin:auto">
     <div>
         <form>
+            <input type="hidden" th:value="${salaryStandard.getId()}" id="idHidden">
             <div class="form-row">
                 <div class="col-md-4 mb-3">
                     <label for="staCode">薪酬标准编号</label>
@@ -27,8 +53,7 @@
                 </div>
                 <div class="col-md-4 mb-3">
                     <label for="staTotal">薪酬总额</label>
-                    <input type="text" class="form-control" id="staTotal" th:value="${salaryStandard.getTotal()}"
-                           readonly>
+                    <input type="text" class="form-control" id="staTotal" readonly>
                 </div>
             </div>
             <div class="form-row">
@@ -59,20 +84,26 @@
             <tr th:each="salaryStandardDetail,status:${salaryStandardDetailList}">
                 <th scope="row" th:text="${status.count}"></th>
                 <td th:text="${salaryStandardDetail.getItemName()}"></td>
-                <td th:text="${salaryStandardDetail.getItemAmount()}"></td>
+                <td>
+                    <input type="text" class="form-control itemAmount"
+                           th:value="${#numbers.formatDecimal(salaryStandardDetail.getItemAmount(), 1, 2)}" readonly>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
     <div>
-        <a th:href="@{/showSalaryStandardList}">
+
+        <button type="button" class="btn btn-outline-primary" id="pass">审核通过</button>
+        <button type="button" class="btn btn-outline-danger" id="reject">驳回</button>
+        <a th:href="@{/salaryStandard}">
             <button type="button" class="btn btn-outline-primary">返回</button>
         </a>
     </div>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -81,6 +112,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
