--- a/src/main/resources/templates/sidUpdate.html
+++ b/src/main/resources/templates/sidUpdate.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     <title>薪资标准修改</title>
-    <script th:src="@{/js/jquery.js}"></script>
     <script>
         $(function () {
             calculateSum();
@@ -29,6 +37,7 @@
                 calculateSum();
             });
         });
+
         function calculateSum() {
             let sum = 0.0;
             $(".itemAmount").each(function () {
@@ -92,7 +101,8 @@
                     <input type="text" class="form-control" th:value="${salaryStandardDetail.getItemName()}">
                 </td>
                 <td>
-                    <input type="text" class="form-control itemAmount" th:value="${#numbers.formatDecimal(salaryStandardDetail.getItemAmount(), 1, 2)}">
+                    <input type="text" class="form-control itemAmount"
+                           th:value="${#numbers.formatDecimal(salaryStandardDetail.getItemAmount(), 1, 2)}">
                 </td>
             </tr>
             </tbody>
@@ -101,11 +111,10 @@
     <div>
 
         <button type="button" class="btn btn-outline-primary" id="change">变更</button>
-        <a th:href="@{/showSalaryStandardList}">
+        <a th:href="@{/salaryStandard}">
             <button type="button" class="btn btn-outline-primary">返回</button>
         </a>
     </div>
 </div>
-<link rel="import" href="linkFile.html">
 </body>
 </html>
